# scryme

./: .gitignore  404.html  CLAUDE.md  Jenkinsfile  README.md  bright_lemon_palette.scss  bubblegum_pink_palette.scss  deep_walnut_palette.scss  index.html  malachite_palette.scss  pine_blue_palette.scss  prussian_blue_palette.scss  sitemap.xml  sonar-project.properties  trop_orange_palette.scss
backend/: pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: script.py.mako
backend/src/: __init__.py  backup.py  binder_service.py  box_service.py  brackets.py  checklists.py  cli.py  collection_edit.py  config.py  cryptobackup.py  currency.py  deck_builder.py  deck_export.py  deck_import.py  deck_suggest.py  deck_sync.py  deck_versions.py  decks.py  demo.py  desktop_entry.py  embeddings.py  facets.py  fx.py  grading.py  llm.py  main.py  market_prices.py  perfcache.py  prices.py  pricing.py  rules_rag.py  scheduler.py  sell.py  set_calendar.py  stats.py  symbols.py  tags.py  templating.py  trade.py  valuation.py  (+1 more)
backend/tests/: conftest.py  seed_cards.py  test_admin.py  test_api.py  test_backup.py  test_backup_disk.py  test_backup_encryption.py  test_binders.py  test_boxes_and_locations.py  test_brackets.py  test_card_price_history.py  test_card_route.py  test_cli.py  test_cli_fx.py  test_client.py  test_collection_edit_stack.py  test_cov_admin_stats.py  test_cov_backup.py  test_cov_binder_service.py  test_cov_box_service.py  test_cov_checklists.py  test_cov_cli.py  test_cov_collection_edit.py  test_cov_currency.py  test_cov_db.py  test_cov_decks.py  (+104 more)
(+239 files in other folders)
