[project]
name = "scryme"
version = "0.0.1"
description = "Self-hostable, Scryfall-like search for your own Magic: The Gathering collection."
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "--strict-markers",
    "--cov=src",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=xml",
]

[tool.coverage.run]
source = ["src"]
omit = ["src/alembic/*", "tests/*"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = [
    "B008",   # FastAPI uses function calls (Depends) in argument defaults
    "UP042",  # str+Enum -> StrEnum: an opinionated refactor with str()-formatting behavior
              # differences; revisit deliberately rather than on a ruff bump.
    "UP047",  # PEP 695 type parameters for generic functions: cosmetic; defer.
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
